src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kanit:wght@600&family=Mooli&family=Quicksand:wght@700&family=Roboto:ital,wght@0,500;0,700;1,100&display=swap");

/* #region: whole file */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}

:root {
  --orange-main: rgb(255, 69, 0);
  --light-orange: rgb(253, 140, 41);
  --blue-main: rgb(0, 0, 67);
  --brand-light: rgb(231, 231, 231);
  --brand-light2: rgb(247, 247, 247);
  --brand-dark: rgb(0, 0, 0);
  --light-gray: rgb(157, 157, 157);
  --brand-orange: rgb(251, 80, 37);
  --light-blue: rgb(12, 12, 158);
}

html,
body {
  width: 100%;
  height: 100%;
}

body {
  background-color: var(--brand-light2);
  font-family: "Roboto", sans-serif;
}

/* #endregion */

/* #region: header */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.5rem;
  margin-inline: 9rem;
}

.headertext {
  color: var(--orange-main);
  font-size: 1.8rem;
  font-weight: bold;
}

button {
  border-radius: 0.75rem;
  height: 2.5rem;
  width: 5.63rem;
  font-weight: bold;
  cursor: pointer;
}

.login {
  background-color: var(--brand-light2);
  color: var(--blue-main);
  border: 0.1rem solid var(--blue-main);
}

.register,
.tracking {
  background-color: var(--orange-main);
  color: var(--brand-light2);
  border: none;
}

.login:hover {
  background-color: var(--brand-light);
  transform: scale(1.03);
}

.register:hover,
.tracking:hover {
  background-color: var(--light-orange);
  transform: scale(1.03);
}

.menu ul {
  display: flex;
  justify-content: space-around;
}

.menu a {
  margin-right: 1.5rem;
  transition: 0.3s;
  color: var(--blue-main);
  font-weight: bold;
}

.menuh:hover {
  color: var(--light-gray);
}

/* #endregion */

/* #region: container */

/* ! ajeitar responsividade */

.container {
  display: flex;
  margin-inline: 2rem;
  padding: 1rem;
  align-items: center;
}

.headline {
  font-size: 1.88rem;
  padding-inline: 8rem;
  color: var(--blue-main);
}

.subheadline {
  color: var(--light-gray);
  font-size: 1.063rem;
  line-height: 1.88rem;
  margin-top: 1rem;
}

.headline span {
  color: var(--brand-orange);
}

/* #endregion */

/* #region: search-menu */
.search-menu {
  display: flex;
  justify-content: center;
  align-items: stretch;
  padding: 20px;
  max-width: 70rem;
  margin: 0 auto;
}

.left-side {
  background-color: var(--blue-main);
  color: var(--brand-light);
  padding: 1.25rem;
  border-radius: 1.25rem 0 0 1.25rem;
  flex: 1;
}

.menu-heading {
  font-size: 20px;
  background-color: transparent;
  color: var(--brand-light2);
}

.right-side {
  background-color: var(--orange-main);
  color: var(--brand-light);
  padding: 20px;
  border-radius: 0 20px 20px 0;
  flex: 1;
}

.input-group {
  background-color: transparent;
  display: flex;
  align-items: baseline;
  gap: 0.7rem;
}

.menuInput {
  padding: 10px;
  margin: 10px 0;
  border: 1px solid #ccc;
  border-radius: 11px;
  cursor: pointer;
}

.check {
  background-color: var(--blue-main);
  color: var(--brand-light2);
  border-radius: 12px;
  height: 40px;
  width: 90px;
  font-weight: bold;
  border: none;
}

.check:hover {
  background-color: var(--light-blue);
  transform: scale(1.03);
  cursor: pointer;
}

#register {
  width: 25rem;
}

#origin {
  max-width: 9rem;
}

#destination {
  max-width: 14rem;
}

#weight {
  max-width: 3rem;
}

.menuSubtitles {
  color: var(--light-gray);
  font-size: 0.9rem;
  margin-top: 5px;
  /* display: inline-block; */
  /* vertical-align: middle; */
  font-style: italic;
}

.white {
  color: white;
}

/* #endregion */

/* #region: 
/*------------ FORMULÁRIOS ---------- */

.oculto {
  display: none;
}

.form-container {
  width: 400px;
  min-height: 400px;
  background: rgba(246, 244, 241, 0.74);
  border-radius: 10px, 0.192;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  backdrop-filter: blur(5px);
  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.413);
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  transition: 1s;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /*centralizando verticalmente e horizontalmente em relação ao pai*/
}

.imgforms {
  width: 100%;
  right: 60%;
  left: 60%;
  border: none;
}

.imgforms2 {
  width: 100%;
  right: 80%;
  border: none;
}

.input-form {
  width: 60%;
  background: rgba(0, 0, 67, 0.477);
  border: none;
  outline: none;
  padding: 10px 20px;
  border-radius: 35px;
  border: 1px solid rgba(255, 255, 255, 0.5);
  font-size: 16px;
  letter-spacing: 1px;
  color: #fff;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  margin-left: 3.5rem;
}

::placeholder {
  color: black;
}

.input-form:first-child {
  margin-top: 4rem;
}

.input-form:not(:first-child) {
  margin-top: 1.5rem;
}

.btn {
  background: var(--brand-light2);
  color: rgb(0, 0, 67);
  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.284);
  max-width: 100px;
  cursor: pointer;
  margin-bottom: 20px;
  font-weight: 600;
}

.btn:hover {
  background: var(--blue-main);
  color: var(--brand-light2);
}

.absolut {
  position: absolute;
  background: none;
}

.forget {
  color: var(--blue-main);
  margin-left: 3.5rem;
  padding: 0.3rem;
}

.forget a {
  color: var(--orange-main);
  font-weight: 600;
  text-decoration: none;
}

/*-------------- FOOTER ------------------*/

footer {
  background-color: var(--blue-main);
  padding-inline: 4rem;
  margin-top: 2rem;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-evenly;
}

.title-footer,
.paragraph {
  color: var(--orange-main);
  text-align: left;
  padding: 1rem;
}

.paragraph,
.contact {
  color: var(--brand-light2);
  line-height: 1.5rem;
}

li {
  list-style-type: none;
}

.social-links {
  display: inline-block;
}

@media (max-width: 480px) {
  .header {
    display: block;
    margin: 0;
  }

  .menu {
    padding-block: 0.8rem;
  }

  .buttons {
    min-width: 15rem;
    display: flex;
    justify-content: center;
    gap: 1rem;
  }

  .headertext {
    text-align: center;
  }

  .container {
    flex-wrap: wrap;
  }

  .headline {
    font-size: 1.2rem;
    padding-inline: 2rem;
  }

  .subheadline {
    line-height: normal;
  }

  img {
    width: 100%;
  }

  .search-menu {
    display: flex;
    flex-direction: column;
  }

  .left-side {
    border-radius: 20px 20px 0 0;
  }

  .right-side {
    border-radius: 0 0 20px 20px;
  }

  .menu-heading {
    text-align: center;
  }

  #register,
  #origin,
  #destination,
  #weight {
    max-width: fit-content;
  }

  .input-group {
    flex-direction: column;
    align-items: center;
  }

  footer {
    max-height: 5rem;
    padding-inline: 2rem;
  }

  .paragraph {
    visibility: hidden;
  }

  a .contact {
    justify-content: center center;
  }
}

